// Copyright 2024 Code Intelligence GmbH
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.demo.libraries.proto;

option java_package = "com.demo.libraries.proto";

message Calculation {
    int32 start_value = 1;
    repeated Operation ops = 2;
}

message Operation {
    oneof op {
        OpAddition addition = 1;
        OpSubtraction subtraction = 2;
        OpMultiplication multiplication = 3;
        OpDivision division = 4;
    }
}

message OpAddition {
    uint32 addend = 1;
}

message OpSubtraction {
    uint32 subtrahend = 1;
}

message OpMultiplication {
    int32 factor = 1;
}

message OpDivision {
    int32 divisor = 1;
}

